# openclaw-humanitarian

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-ar.md  CONTRIBUTING-fa.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.ar.md  README.es.md  README.fa.md  README.fr.md  README.md  README.ru.md  README.zh.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  translation_request.md
.github/workflows/: ci.yml
data/: glossary.json
data/sample_reports/: sample_1.json  sample_2.json  sample_3.json
data/supply_chain/: README.md  critical_routes.json
docs/: aap-feedback.md  api-reference.md  architecture.md  auto-sitrep-methodology.md  data-flow.md  demo-recording.md  dpia-template.md  future-biosignal-mesh.md  glossary-review-workflow.md  humanitarian-compliance.md  incident-response.md  offline-architecture.md  partner-sop.md  readme-updates.md  references.md  technical-readiness-matrix.md  threat-model.md  translation-pipeline.md  use-cases.md
src/: demo.py
src/accessibility/: audio_bulletin.py  simplified.py
src/alert/: __init__.py  airstrike_monitor.py
src/bot/: __init__.py  commands.py  messages.py  telegram_bot.py
src/bot/locales/: apc.json  ar.json  dar.json  en.json  es.json  fa.json  fr.json  ku.json  ps.json  ru.json  tr.json  zh.json
src/data/: humset_format.py
src/family_links/: matcher.py  privacy.py  registry.py
src/feedback/: aggregator.py  anonymizer.py  collector.py  nlp_analyzer.py  trend_detector.py
src/geo/: __init__.py  routing.py
src/logistics/: __init__.py  supply_chain.py
src/mesh/: README.md  briar_bridge.md  meshtastic_config.md
src/mesh/hardware/: bom.md
src/mesh/node_firmware/: deployment_guide.md  humanitarian_beacon.md  solar_config.md
src/mesh/protocol/: humanitarian_broadcast_protocol.md  interop.md
src/mhpss/: helplines.py  referral.py  self_help.py
src/nlp/: classifier.py  entities.py  extractor.py  summarizer.py
src/offline/: __init__.py  mesh.py
src/reporting/: auto_sitrep.py  citation_linker.py  quality_scorer.py
src/safety/: document_protection.py  emergency_contacts.py  uxo_guide.py  uxo_guide_header.tmp
src/scraper/: __init__.py  ocha.py  parser.py  reliefweb.py
src/security/: __init__.py  canary.py
src/sms/: __init__.py  gateway.py
src/translator/: __init__.py  quality_check.py  translate.py
src/verification/: cross_reference.py  disclaimer_generator.py  source_checker.py  trust_scorer.py
tests/: audit_academic.mjs  audit_node.mjs  integration_audit.py  test_accessibility.py  test_family_links.py  test_mesh.py  test_mhpss.py  test_nlp.py  test_reporting.py  test_safety.py  test_scraper.py  test_supply_chain.py  test_translator.py  test_verification.py
