[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-humanitarian"
version = "0.1.0"
description = "AI-powered multilingual humanitarian bulletins for crisis-affected civilians"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "OpenClaw Humanitarian Network", email = "aid@agentmail.to"}]
keywords = ["humanitarian", "translation", "crisis", "multilingual", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]
dependencies = [
    "requests>=2.31.0",
    "python-telegram-bot>=20.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/CuiweiG/openclaw-humanitarian"
Documentation = "https://github.com/CuiweiG/openclaw-humanitarian/tree/main/docs"
Issues = "https://github.com/CuiweiG/openclaw-humanitarian/issues"
