[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crisisbridge"
version = "0.2.0"
description = "AI-powered multilingual humanitarian bulletins for crisis-affected civilians"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CrisisBridge", email = "aid@agentmail.to"}]
keywords = ["humanitarian", "translation", "crisis", "multilingual", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]
dependencies = [
    "requests>=2.31.0",
    "python-telegram-bot>=20.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/CuiweiG/openclaw-humanitarian"
Documentation = "https://github.com/CuiweiG/openclaw-humanitarian/tree/main/docs"
Issues = "https://github.com/CuiweiG/openclaw-humanitarian/issues"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "N"]
ignore = [
    "E501",   # line too long — enforced at 120 but many legacy lines exceed
    "E701",   # multiple statements on one line — legacy code style
    "F401",   # unused imports — to be cleaned up incrementally
    "F541",   # f-string without placeholders — minor
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
